k8s/services/web-client/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: web
          resources:
            requests:
              memory: "512Mi"
            limits:
              memory: "512Mi"
