k8s/services/web-client/overlays/dev/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web-ingressroute
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`dev.viscord.app`) && !(PathPrefix(`/api`) || PathPrefix(`/.well-known`))
      kind: Rule
      priority: 1
      services:
        - name: web-service
          port: 3000
      middlewares:
        - name: redirect-https
  tls:
    certResolver: letsencrypt
